# pre-commit-hooks

./: .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
pre_commit_hooks/: check_forbidden_strings.py
