[tool.poetry]
name = "pre-commit-hooks"
version = "0.1.0"
description = ""
authors = ["tobiasknudsen <tobias.hartvedt.knudsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
check_forbidden_strings = 'pre_commit_hooks.check_forbidden_strings:main'