[tool.poetry]
name = "pre-commit-hooks"
version = "0.1.4"
description = ""
authors = ["tobiasknudsen <tobias.hartvedt.knudsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.9b0"
mypy = "^0.910"
isort = "^5.6.4"

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'

[tool.semantic_release]
version_variable = [
    "pre_commit_hooks/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
check_forbidden_strings = 'pre_commit_hooks.check_forbidden_strings:main'
